Calling something that does not exist.
That's what appears to be my problem, but I have no idea where it lies.
I can't seem to properly reference info between PlayerSpawn and
DamageHandler : I

--- a/Bullet-Hell/Assembly-CSharp-vs.csproj
+++ b/Bullet-Hell/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Ballistics.cs" />
      <Compile Include="Assets\Scripts\DamageHandler.cs" />
+     <Compile Include="Assets\Scripts\DisplayText.cs" />
      <Compile Include="Assets\Scripts\EnemySpawn.cs" />
      <Compile Include="Assets\Scripts\LevelDatabase.cs" />
      <Compile Include="Assets\Scripts\MoveForward.cs" />
