--- a/Bullet-Hell/Assembly-CSharp.csproj
+++ b/Bullet-Hell/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Ballistics.cs" />
      <Compile Include="Assets\Scripts\DamageHandler.cs" />
+     <Compile Include="Assets\Scripts\DisplayText.cs" />
      <Compile Include="Assets\Scripts\EnemySpawn.cs" />
      <Compile Include="Assets\Scripts\LevelDatabase.cs" />
      <Compile Include="Assets\Scripts\MoveForward.cs" />
