--- a/Bullet-Hell/Assembly-CSharp-vs.csproj
+++ b/Bullet-Hell/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Ballistics.cs" />
      <Compile Include="Assets\Scripts\DamageHandler.cs" />
      <Compile Include="Assets\Scripts\DisplayText.cs" />
+     <Compile Include="Assets\Scripts\EnemyMove.cs" />
      <Compile Include="Assets\Scripts\EnemySpawn.cs" />
      <Compile Include="Assets\Scripts\LevelDatabase.cs" />
      <Compile Include="Assets\Scripts\MoveForward.cs" />
