--- a/Bullet-Hell/Assembly-CSharp-vs.csproj
+++ b/Bullet-Hell/Assembly-CSharp-vs.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerSpawn.cs" />
      <Compile Include="Assets\Scripts\ShowHitbox.cs" />
+     <Compile Include="Assets\Scripts\SpawnBoss.cs" />
      <Compile Include="Assets\Scripts\SpawnEnemy.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
