--- a/Bullet-Hell/Assembly-CSharp.csproj
+++ b/Bullet-Hell/Assembly-CSharp.csproj
@@ -51,26 +51,27 @@
      <Compile Include="Assets\Script Bullet Patterns\ConePattern.cs" />
      <Compile Include="Assets\Script Bullet Patterns\GrazePattern.cs" />
      <Compile Include="Assets\Script Bullet Patterns\SUperSecretMurderousPattern.cs" />
-     <Compile Include="Assets\Scripts\Ballistics.cs" />
-     <Compile Include="Assets\Scripts\BlockInteraction.cs" />
-     <Compile Include="Assets\Scripts\Boss1Ballistics.cs" />
      <Compile Include="Assets\Scripts\CanMoveToNewLevel.cs" />
      <Compile Include="Assets\Scripts\DamageHandler.cs" />
      <Compile Include="Assets\Scripts\DisplayText.cs" />
      <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
-     <Compile Include="Assets\Scripts\EnemyMovement.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\Ballistics.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\Boss1Ballistics.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\Boss1Movement.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\EnemyMovement.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\SpawnBoss.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\SpawnEnemies.cs" />
+     <Compile Include="Assets\Scripts\Enemy Scripts\TimedMoveForward.cs" />
      <Compile Include="Assets\Scripts\LevelDatabase.cs" />
      <Compile Include="Assets\Scripts\MoveForward.cs" />
      <Compile Include="Assets\Scripts\NewGame.cs" />
-     <Compile Include="Assets\Scripts\PlayerBallistics.cs" />
-     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
-     <Compile Include="Assets\Scripts\PlayerSpawn.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\BlockInteraction.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\PlayerBallistics.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\PlayerSpawn.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\ShowHitbox.cs" />
      <Compile Include="Assets\Scripts\SelfDestruct.cs" />
-     <Compile Include="Assets\Scripts\ShowHitbox.cs" />
-     <Compile Include="Assets\Scripts\SpawnBoss.cs" />
-     <Compile Include="Assets\Scripts\SpawnEnemies.cs" />
      <Compile Include="Assets\Scripts\StopMoving.cs" />
-     <Compile Include="Assets\Scripts\TimedMoveForward.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
