Noting down tweaks
They need to be made. Also,  I fixed the problem with the second pattern
not having its bullets follow the boss until moving

--- a/Bullet-Hell/Assembly-CSharp-vs.csproj
+++ b/Bullet-Hell/Assembly-CSharp-vs.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\MoveForward.cs" />
      <Compile Include="Assets\Scripts\NewGame.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\BlockInteraction.cs" />
+     <Compile Include="Assets\Scripts\Player Scripts\BlockInteractionChild.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\PlayerBallistics.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Player Scripts\PlayerSpawn.cs" />
