MiniBoss1 got a lot of work done. Pattern 1 is almost done and movement is working

--- a/Bullet-Hell/Assembly-CSharp.csproj
+++ b/Bullet-Hell/Assembly-CSharp.csproj
@@ -71,9 +71,9 @@
      <Compile Include="Assets\Game\Misc\NewGame.cs" />
      <Compile Include="Assets\Game\Movement\BlockMovement.cs" />
      <Compile Include="Assets\Game\Movement\Boss1Movement.cs" />
-     <Compile Include="Assets\Game\Movement\MiniBoss1Movement.cs" />
      <Compile Include="Assets\Game\Movement\MoveForward.cs" />
      <Compile Include="Assets\Game\Movement\Movement.cs" />
+     <Compile Include="Assets\Game\Movement\Movement_Boss.cs" />
      <Compile Include="Assets\Game\Movement\Movement_Generic.cs" />
      <Compile Include="Assets\Game\Movement\PlayerMovement.cs" />
      <Compile Include="Assets\Game\Movement\TimedMoveForward.cs" />
