--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -81,8 +81,11 @@
     <Compile Include="Assets\ASuperSecretMurderousPattern.cs" />
     <Compile Include="Assets\Game\BulletCollision.cs" />
     <Compile Include="Assets\Game\Characters\Character.cs" />
+    <Compile Include="Assets\Game\Characters\Enemies\BMiniBoss1\Character_MiniBoss1.cs" />
+    <Compile Include="Assets\Game\Characters\Enemies\Character_StandardEnemy.cs" />
     <Compile Include="Assets\Game\Characters\Enemies\EnemySpawnManager.cs" />
     <Compile Include="Assets\Game\Characters\Player\BlockInteraction.cs" />
+    <Compile Include="Assets\Game\Characters\Player\Character_Player.cs" />
     <Compile Include="Assets\Game\Characters\Player\PlayerSpawn.cs" />
     <Compile Include="Assets\Game\Characters\Player\ShowEnlargedCollider.cs" />
     <Compile Include="Assets\Game\Characters\Player\ShowHitbox.cs" />
