Positions 3, 4 and 5 on Pattern 2 don't fire.
Cause unknown. Possibly related to the Y coordinate restriction, but
that doesn't make much sense because one of the positions is in the same
Y coordinate as the two that actually fire.

--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Assets\Game\Movement\Movement_Generic.cs" />
     <Compile Include="Assets\Game\Movement\PlayerMovement.cs" />
     <Compile Include="Assets\Game\Movement\TimedMoveForward.cs" />
+    <Compile Include="Assets\Game\Movement\ZigZag.cs" />
     <Compile Include="Assets\Game\SelfDestruct.cs" />
     <Compile Include="Assets\Pixelplacement\iTweenPath\iTweenPath.cs" />
     <Compile Include="Assets\UnityTestTools\Assertions\AssertionComponent.cs" />
