--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -102,8 +102,8 @@
     <Compile Include="Assets\Game\FirePatterns\MiniBoss1_Pattern1.cs" />
     <Compile Include="Assets\Game\FirePatterns\MiniBoss1_Pattern2.cs" />
     <Compile Include="Assets\Game\FirePatterns\PlayerBallistics.cs" />
-    <Compile Include="Assets\Game\Level.cs" />
     <Compile Include="Assets\Game\LevelDatabase.cs" />
+    <Compile Include="Assets\Game\Levels\Level.cs" />
     <Compile Include="Assets\Game\Misc\CanMoveToNewLevel.cs" />
     <Compile Include="Assets\Game\Misc\DisplayText.cs" />
     <Compile Include="Assets\Game\Misc\DontDestroyOnLoad.cs" />
