Pulling information from the right places
LevelDatabase is now GameDatabase and will provide any information
pertraining what is happening at that moment in the game as well as the
repository for all enemies and game-relevant objects.
Furthermore, level information is now pulled from the Level script
instead of the database, as it should.

--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Assets\Game\FirePatterns\MiniBoss1_Pattern1.cs" />
     <Compile Include="Assets\Game\FirePatterns\MiniBoss1_Pattern2.cs" />
     <Compile Include="Assets\Game\FirePatterns\PlayerBallistics.cs" />
-    <Compile Include="Assets\Game\LevelDatabase.cs" />
+    <Compile Include="Assets\Game\GameDatabase.cs" />
     <Compile Include="Assets\Game\Levels\Level.cs" />
     <Compile Include="Assets\Game\Misc\CanMoveToNewLevel.cs" />
     <Compile Include="Assets\Game\Misc\DisplayText.cs" />
