Slices for Pattern 2 done.
They exist, they explode, and bullets come out of them.

Now to work on the shotgun part of Pattern 2 in MiniBoss2.

--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Assets\Game\Characters\Player\ShowEnlargedCollider.cs" />
     <Compile Include="Assets\Game\Characters\Player\ShowHitbox.cs" />
     <Compile Include="Assets\Game\Explode.cs" />
+    <Compile Include="Assets\Game\ExplodeDownwards.cs" />
     <Compile Include="Assets\Game\GameDatabase.cs" />
     <Compile Include="Assets\Game\Misc\CanMoveToNewLevel.cs" />
     <Compile Include="Assets\Game\Misc\DisplayText.cs" />
