--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ASuperSecretMurderousPattern.cs" />
+    <Compile Include="Assets\CountdownToDamage.cs" />
     <Compile Include="Assets\Game\BulletCollision.cs" />
     <Compile Include="Assets\Game\Characters\Enemies\BMiniBoss1\Character_MiniBoss1.cs" />
     <Compile Include="Assets\Game\Characters\Enemies\BMiniBoss1\FirePatterns\MiniBoss1_Pattern1.cs" />
