Bomb and Everything is broken Bombs are done. Somehow, enemies are firing while moving again and the collider for blocks when pressing shift kills you once more when in contact with bullets.

--- a/Bullet-Hell/Bullet-Hell.CSharp.csproj
+++ b/Bullet-Hell/Bullet-Hell.CSharp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\Game\Characters\Player\PlayerBomb.cs" />
     <Compile Include="Assets\Game\Characters\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Game\Characters\Player\PlayerSpawn.cs" />
+    <Compile Include="Assets\Game\Characters\Player\PlayerStalk.cs" />
     <Compile Include="Assets\Game\Characters\Player\ShowEnlargedCollider.cs" />
     <Compile Include="Assets\Game\Characters\Player\ShowHitbox.cs" />
     <Compile Include="Assets\Game\CountdownToDamage.cs" />
